1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aliviation-deploy
  labels:
    app: aliviation-deploy
  namespace: aliviation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aliviation-deploy
  template:
    metadata:
      labels:
        app: aliviation-deploy
    spec:
      containers:
      - name: aliviation-deploy
        image: 271122/ali.viation:17fc896
        ports:
        - containerPort: 80
        - containerPort: 443
