2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aliviation-service
  labels:
    app: aliviation-service
  namespace: aliviation
spec:
  type: ClusterIP
  selector:
    app: aliviation-deploy
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
  - name: https
    protocol: TCP
    port: 443
    targetPort: 443
