3-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aliviation-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  namespace: aliviation
spec:
  ingressClassName: nginx
  rules:
    - host: alvn.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: aliviation-service
                port:
                  number: 80
